--- a/visitas/checkin.html
+++ b/visitas/checkin.html
@@ -47,12 +47,12 @@
         <!-- Formulário de Check-in -->
         <div class="checkin-form">
             <h2>✍️ RESUMO DA VISITA</h2>
-            
+
             <div class="form-group">
                 <label for="summary">RESUMO DA VISITA *</label>
-                <textarea 
-                    id="summary" 
-                    name="summary" 
+                <textarea
+                    id="summary"
+                    name="summary"
                     placeholder="Descreva o que aconteceu durante a visita, principais pontos discutidos, próximos passos..."
                     required
                 ></textarea>
@@ -80,12 +80,12 @@
             <div class="form-group">
                 <label for="termometro">TERMÔMETRO DE NEGOCIAÇÃO (1 a 10)</label>
                 <div class="termometro-container">
-                    <input 
-                        type="range" 
-                        id="termometro" 
-                        name="termometro" 
-                        min="1" 
-                        max="10" 
+                    <input
+                        type="range"
+                        id="termometro"
+                        name="termometro"
+                        min="1"
+                        max="10"
                         value="5"
                         class="termometro-slider"
                     >
@@ -100,24 +100,24 @@
                 </div>
             </div>
 
-            <div class="form-group">
+            <!-- <div class="form-group">
                 <label for="numero_os">NÚMERO DA OS</label>
-                <input 
-                    type="text" 
-                    id="numero_os" 
-                    name="numero_os" 
+                <input
+                    type="text"
+                    id="numero_os"
+                    name="numero_os"
                     placeholder="Ex: OS-2025-001, 12345, etc."
                     class="form-input"
                 >
                 <small class="form-help">Informe o número da Ordem de Serviço se aplicável</small>
-            </div>
+            </div> -->
 
             <div class="form-group">
                 <label for="attachment">ANEXAR ARQUIVO (OPCIONAL)</label>
-                <input 
-                    type="file" 
-                    id="attachment" 
-                    name="attachment" 
+                <input
+                    type="file"
+                    id="attachment"
+                    name="attachment"
                     accept="image/*,.pdf,.doc,.docx,.xls,.xlsx,.txt"
                     class="file-input"
                 >
