feat: update visitas.html and checkin.html with new fields and labels
- Changed label from "EMPRESAS" to "EMPRESASw" in visitas.html.
- Added "Tipo da Visita" information display in checkin.html.
- Introduced multiple selection for visit motives in checkin.html with detailed options.
- Added conditional fields for "VISITA TÉCNICA" in checkin.html, including property name and objectives.
- Removed commented-out section for "NÚMERO DA OS" in checkin.html.

--- a/visitas.html
+++ b/visitas.html
@@ -59,7 +59,7 @@
                         </select>
                     </div>
                     <div class="form-group">
-                        <label>EMPRESAS</label>
+                        <label>EMPRESASw</label>
                         <select id="empresaFilter">
                             <option value="">Todas</option>
                         </select>
