fix: correct typo in empresas label in visitas.html

--- a/visitas.html
+++ b/visitas.html
@@ -59,7 +59,7 @@
                         </select>
                     </div>
                     <div class="form-group">
-                        <label>EMPRESASw</label>
+                        <label>EMPRESAS</label>
                         <select id="empresaFilter">
                             <option value="">Todas</option>
                         </select>
