feat: add retroactive visit handling and styling, including new badge and database updates

--- a/visitas.html
+++ b/visitas.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VISITAS - SISTEMA DE VISITAS</title>
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/visitas.css">
 </head>
 <body>
     <script src="https://cdn.jsdelivr.net/npm/xlsx/dist/xlsx.full.min.js"></script>
