fix: filter in ATRASADOS

--- a/dashboard.html
+++ b/dashboard.html
@@ -55,6 +55,7 @@
                             <option value="">TODOS OS STATUS</option>
                             <option value="AGENDADA">AGENDADA</option>
                             <option value="REALIZADA">REALIZADA</option>
+                            <option value="ATRASADA">ATRASADA</option>
                             <option value="REMARCADA">REMARCADA</option>
                             <option value="CANCELADA">CANCELADA</option>
                         </select>
