--- a/visitas.html
+++ b/visitas.html
@@ -101,14 +101,15 @@
                     </table>
                 </div>
             </div>
+            <!-- Modal de cancelamento com estilos corrigidos -->
             <div id="cancelModal" class="modal" style="display:none;">
                 <div class="modal-content">
                     <h3>Cancelar Visita</h3>
                     <p>Informe o motivo do cancelamento:</p>
-                    <textarea id="cancelMotivo" rows="4"></textarea>
+                    <textarea id="cancelMotivo" rows="4" placeholder="Digite o motivo do cancelamento..."></textarea>
                     <div class="modal-actions">
-                        <button id="confirmCancel" class="btn-danger">Confirmar</button>
                         <button id="closeCancel" class="btn-secondary">Fechar</button>
+                        <button id="confirmCancel" class="btn-danger">Confirmar</button>
                     </div>
                 </div>
             </div>
